--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
         .flow-card.pod { border-left-color: #20c997; }
         .flow-card.rotation { border-left-color: #007bb6; }
         .flow-card h4 { font-size: 18px; margin-bottom: 10px; color: #333; display: flex; align-items: center; }
+        
+        /* === CUSTOM STYLE FOR LINKED H4 TEXT === */
+        .flow-card h4 a { 
+            text-decoration: none; 
+            color: #007bb6; /* Blue color for hyperlink text */
+            display: flex; 
+            align-items: center;
+        }
+        .flow-card h4 a:hover { 
+            color: #667eea; /* Lighter blue on hover */
+            text-decoration: underline; /* Underline on hover */
+            cursor: pointer;
+        } 
+        /* ======================================= */
+
         .flow-card h4 span { font-size: 24px; margin-right: 10px; line-height: 1; }
         .flow-card p { font-size: 14px; color: #777; margin-bottom: 5px; }
         .flow-card ul { list-style: none; margin-top: 10px; font-size: 14px; }
@@ -377,7 +392,7 @@
                     To prepare for the Morning Training Pods (10:30 - 12:00) and the Afternoon Workshops, please review the submitted materials for the startups you will be mentoring. All links and data points are centralized in the Google Sheet below.
                 </p>
 
-                <!-- FINAL CORRECTED LINK IS HERE -->
+                <!-- Anchor Button is retained as a clear, primary CTA -->
                 <a href="https://docs.google.com/spreadsheets/d/1b-xNHw2DuKUB2krIrxHGzxICi9lOpm4mkkQ4-5JJZGo/edit?gid=1276989460#gid=1276989460" target="_blank" class="folder-button" style="margin-bottom: 30px; background: linear-gradient(135deg, #20c997 0%, #10a37f 100%); box-shadow: 0 4px 15px rgba(32, 201, 151, 0.4);">
                     <span>🔗</span> GO TO STARTUP DATA SHEET (Directly to "Startups attending CES" tab)
                 </a>
@@ -390,7 +405,12 @@
                 <h2>Key Data Points Available in the "Startups attending CES" Tab</h2>
                 <div class="flow-grid">
                     <div class="flow-card" style="border-left-color: #667eea;">
-                        <h4><span>📄</span> Pitch & Deck Links</h4>
+                        <!-- LINK EMBEDDED IN H4 WITH STYLING INHERITED FROM CSS UPDATE -->
+                        <h4>
+                            <a href="https://docs.google.com/spreadsheets/d/1b-xNHw2DuKUB2krIrxHGzxICi9lOpm4mkkQ4-5JJZGo/edit?gid=1276989460#gid=1276989460" target="_blank">
+                                <span>📄</span> Pitch & Deck Links
+                            </a>
+                        </h4>
                         <ul>
                             <li><strong>Original Pitch:</strong> Column F</li>
                             <li><strong>Sales Deck File:</strong> Column I</li>
@@ -399,7 +419,12 @@
                         </ul>
                     </div>
                     <div class="flow-card" style="border-left-color: #ff4500;">
-                        <h4><span>📢</span> Messaging & Analysis</h4>
+                        <!-- LINK EMBEDDED IN H4 WITH STYLING INHERITED FROM CSS UPDATE -->
+                        <h4>
+                            <a href="https://docs.google.com/spreadsheets/d/1b-xNHw2DuKUB2krIrxHGzxICi9lOpm4mkkQ4-5JJZGo/edit?gid=1276989460#gid=1276989460" target="_blank">
+                                <span>📢</span> Messaging & Analysis
+                            </a>
+                        </h4>
                         <ul>
                             <li><strong>30-Second Pitch:</strong> Column J</li>
                             <li><strong>Company Description:</strong> Column O</li>
