--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 afternoon: { time: '13:00 - 14:30 & 14:50 - 16:20', room: 'Room 405', workshop: 'W2: CES Hunting, Party Tactics', co_mentor: 'Shafeen Charania', tasks: ['Deliver PPT on CES Floor Hunting & Party Tactics (Shafeen leads lecture)', 'Help lead Mock party simulation with music.', 'Provide feedback on Post-Tradeshow Follow-up systems.'] }
             },
             'Deborah Magid': {
-                company: 'Independent VC Advisor', expertise: 'Corporate VC, Strategic Partnerships', track: 'Challenger', w_code: 'w1',
+                company: 'Managing Director', expertise: 'Corporate VC, Strategic Partnerships', track: 'Challenger', w_code: 'w1',
                 keynote: { time: '09:20 - 09:35', topic: '"Building Corporate Partnerships & Navigating US Gov Funding"' },
                 morning_pod: { time: '10:30 - 12:00', room: 'Room 302', staff: 'Ken', focus: 'Sales Deck Review, Strategic Positioning' },
                 afternoon: { time: '13:00 - 14:30 & 14:50 - 16:20', room: 'Staircase Right', workshop: 'W1: Fact Finding & Booth Engagement', co_mentor: 'Johnny Yu', tasks: ['Provide short PPT lecture (15 min) on booth engagement best practices.', 'Lead simulated booth interactions and play challenging buyer roles.', 'Focus on Fact-finding techniques and 10-second hooks.'] }
@@ -727,7 +727,7 @@
         // Complete Mentor Roster Data for the dedicated tab
         const fullMentorRoster = [
             { name: 'Ashley Hsueh', company: 'Bain & Company', expertise: 'Management consultant; Technology & Cloud Services & Performance Improvement; M&A Strategy.', linkedin: 'https://www.linkedin.com/in/ashleyhsueh/' },
-            { name: 'Deborah Magid', company: 'Independent VC Advisor', expertise: 'Venture/Corporate Innovation Advisor; Corporate VC, Enterprise Software, Strategic Partnerships.', linkedin: 'https://www.linkedin.com/in/deborah-magid-b5318/' },
+            { name: 'Deborah Magid', company: 'NextStar Venture Partner', expertise: 'Venture/Corporate Innovation Advisor; Corporate VC, Enterprise Software, Strategic Partnerships.', linkedin: 'https://www.linkedin.com/in/deborah-magid-b5318/' },
             { name: 'Dr. Volker Kaese', company: 'Ingenev Mobility', expertise: 'CEO; Former Head of Innovation VW & Audi globally; Automotive Strategy & Development.', linkedin: 'https://www.linkedin.com/in/volkerkaese/' },
             { name: 'Shafeen Charania', company: 'fluency', expertise: 'COO; Strategy/Operations Leader; ex-SmartGames Ltd.', linkedin: 'https://www.linkedin.com/in/shafeen/' },
             { name: 'Johnny Yu', company: 'Mosaic Venture Lab', expertise: 'Managing Director; Finance, Operations, Investment Strategy.', linkedin: 'https://www.linkedin.com/in/johnny-yu-21b36128/' },
