--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 afternoon: { time: '13:00 - 14:30 & 14:50 - 16:20', room: 'Room 405', workshop: 'W2: CES Hunting, Party Tactics', co_mentor: 'Shafeen Charania', tasks: ['Deliver PPT on CES Floor Hunting & Party Tactics (Shafeen leads lecture)', 'Help lead Mock party simulation with music.', 'Provide feedback on Post-Tradeshow Follow-up systems.'] }
             },
             'Deborah Magid': {
-                company: 'Managing Director', expertise: 'Corporate VC, Strategic Partnerships', track: 'Challenger', w_code: 'w1',
+                company: 'NextStar Venture Partners', expertise: 'Corporate VC, Strategic Partnerships', track: 'Challenger', w_code: 'w1',
                 keynote: { time: '09:20 - 09:35', topic: '"Building Corporate Partnerships & Navigating US Gov Funding"' },
                 morning_pod: { time: '10:30 - 12:00', room: 'Room 302', staff: 'Ken', focus: 'Sales Deck Review, Strategic Positioning' },
                 afternoon: { time: '13:00 - 14:30 & 14:50 - 16:20', room: 'Staircase Right', workshop: 'W1: Fact Finding & Booth Engagement', co_mentor: 'Johnny Yu', tasks: ['Provide short PPT lecture (15 min) on booth engagement best practices.', 'Lead simulated booth interactions and play challenging buyer roles.', 'Focus on Fact-finding techniques and 10-second hooks.'] }
