--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                     </tr>
                     <tr>
                         <td><a href="https://www.linkedin.com/in/khooyinle/" target="_blank">Wilson (Yin-Le) Khoo</a></td>
-                        <td>co-pace (Continental)</td>
+                        <td>co-pace (Aumovio)</td>
                         <td>Director & Head of co-pace APAC (ex-China); Corporate VC, Mobility, Strategic Partnerships.</td>
                     </tr>
                     <tr>
@@ -711,7 +711,7 @@
                 afternoon: { time: '13:00 - 14:30 & 14:50 - 16:20', room: 'Room 405', workshop: 'W2: CES Hunting, Party Tactics', co_mentor: 'Christopher Balmaseda', tasks: ['Deliver PPT on CES Floor Hunting & Party Tactics (Shafeen leads lecture)', 'Help lead Mock party simulation with music.', 'Provide feedback on Post-Tradeshow Follow-up systems.'] }
             },
             'Wilson Khoo': {
-                company: 'co-pace (Continental)', expertise: 'Corporate VC, Mobility, Strategic Partnerships', track: 'Challenger', w_code: 'w1',
+                company: 'co-pace (Aumovio)', expertise: 'Corporate VC, Mobility, Strategic Partnerships', track: 'Challenger', w_code: 'w1',
                 keynote: null,
                 morning_pod: { time: '10:30 - 12:00', room: 'Room 423', staff: 'Josh', focus: 'Sales Deck Review, Strategic Positioning' },
                 afternoon: { time: '13:00 - 14:30 & 14:50 - 16:20', room: 'Staircase Left', workshop: 'W1: Fact Finding & Booth Engagement', co_mentor: 'Luca Di Fiore', tasks: ['Provide short PPT lecture (15 min) on booth engagement best practices.', 'Lead simulated booth interactions and play challenging buyer roles.', 'Focus on Fact-finding techniques and 10-second hooks.'] }
@@ -734,7 +734,7 @@
             { name: 'Chander Kant', company: 'K Ventures', expertise: 'CEO; Serial Entrepreneurship (SaaS), M&A exits, Angel investing.', linkedin: 'https://www.linkedin.com/in/chanderkant/' },
             { name: 'Christopher Balmaseda', company: 'Valtec', expertise: 'Co-Founder & COO; Cross-border Venture Building, Life science/biotech.', linkedin: 'https://www.linkedin.com/in/christopher-balmaseda/' },
             { name: 'Mark Birch', company: 'TribeROI', expertise: 'Founder; Developer Relations, Community Building, Cloud GTM (ex-AWS).', linkedin: 'https://www.linkedin.com/in/startupmark/' },
-            { name: 'Wilson (Yin-Le) Khoo', company: 'co-pace (Continental)', expertise: 'Director & Head of co-pace APAC (ex-China); Corporate VC, Mobility, Strategic Partnerships.', linkedin: 'https://www.linkedin.com/in/khooyinle/' },
+            { name: 'Wilson (Yin-Le) Khoo', company: 'co-pace (Aumovio)', expertise: 'Director & Head of co-pace APAC (ex-China); Corporate VC, Mobility, Strategic Partnerships.', linkedin: 'https://www.linkedin.com/in/khooyinle/' },
             { name: 'Luca Di Fiore', company: 'ADATA Technology (XPG)', expertise: 'Head of Products, Xtreme Performance Gear; R&D/Product Mgmt, Hardware Eng.', linkedin: 'https://www.linkedin.com/in/luca-di-fiore-7165921/' },
             { name: 'Bruce Bateman', company: 'Cold Electric', expertise: 'Founder/Principal; Deep-Tech Hardware, R&D Leadership, Energy/IoT.', linkedin: 'https://www.linkedin.com/in/brucewbateman/' },
             { name: 'Leland Lai', company: 'phireGEN Advisory Group', expertise: 'Managing Director; Telecommunications, Mobile Tech, Go-to-Market.', linkedin: 'https://tw.linkedin.com/in/lelandlai' },
